gcc/testsuite/rust/rustc/ui/issues/issue-15965.rs
fn main() {
    return
        { return () }
// { dg-error ".E0282." "" { target *-*-* } .-1 }
    ()
    ;
}

